# dagorder

./: .pre-commit-config.yaml  README.md  pyproject.toml
dagorder/: __init__.py
examples/: run.py
tests/: test_basic.py
